--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,6 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set-option -g default-terminal "screen-256color"
 #set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 10000
@@ -55,21 +54,6 @@ set -sg escape-time 0
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
-
 # THEME
 set -g status-bg black
 set -g status-fg white
@@ -78,7 +62,8 @@ set -g window-status-current-fg black
 set -g window-status-current-attr bold
 set -g status-interval 60
 set -g status-left-length 30
-# set -g status-left '#[fg=green](#S) #whoami)'
-# set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g status-left '#[fg=green](#S) #(whoami)'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
-set-option -g default-shell /bin/zsh
+set-option -g default-terminal "screen-256color"
+set-option -ga update-environment 'de-env'
